# NanoGrazDemo

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.rst  nanograz.spec  pyproject.toml  requirements.txt
demo/: scope_demo.py
demo/stdlib/: argparse_demo.py  datetime_demo.py  f_strings_demo.py  json_pickle_demo.py  pathlib_demo.py  reg_demo.py
docs/source/: conf.py  documentation.rst  index.rst
src/nanograz/: __main__.py  example.py
src/nanograz/OOP/: car.py  lambda.py  vector.py
tests/: test_OOP.py  test_car.py  test_example.py  test_regex.py  test_vector.py
